@@ -1,0 +1,10 @@
+
+.*file format.*
+
+Disassembly of section \.text:
+
+.* <.*>:
+.*:	8f82802c *	lw	v0,-32724\(gp\)
+	\.\.\.
+.*:	8f82802c *	lw	v0,-32724\(gp\)
+	\.\.\.
