@@ -1,0 +1,2 @@
+	.text
+	lw	$2,%gottprel(tls_hidden)($28)
