@@ -1,3 +1,9 @@
+2006-02-04  Richard Sandiford  <richard@codesourcery.com>
+
+	* elfxx-mips.c (mips_elf_initialize_tls_index): If a TLS symbol
+	has already been assigned a GOT index, copy that index to the
+	current hash table entry.
+
 2006-02-01  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* elfxx-sparc.c (_bfd_sparc_elf_relocate_section): Reinstate bypass
